--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
@@ -15,29 +16,11 @@
     <script src="js/parsley.js"></script>
     <script src="js/jquery.mask.min.js"></script>
     <script src="https://kit.fontawesome.com/5ae85dff3f.js" crossorigin="anonymous"></script>
+
    
-    <title>Formulário</title>
+    <title>BUSCA CEP</title>
 </head>
 ​
-<style>
-    h1 {
-        text-align: center;
-        font-weight: lighter;
-    }
-​
-    .form-control,
-    .btn {
-        border-radius: 0px;
-    }
-​
-    .parsley-errors-list {
-        color: #f00;
-    }
-​
-    .parsley-error {
-        border: 1px solid #f00;
-    }
-</style>
 ​
 <body>
     <div class="container border rounded p-5 mt-5 shadow">
@@ -116,53 +99,7 @@
     </div>
 
 
-    <script>    
-    /**
-    * Moves the map to display over Berlin
-    *
-    * @param  {H.Map} map      A HERE Map instance within the application
-    */
-    function moveMapTo(map){
-        map.setCenter({lat:document.getElementById('latitude').value, lng:document.getElementById('longitude').value});//-23.3504402,-53.426321,11
-        map.setZoom(13);
-    }
-    /**
-    * Boilerplate map initialization code starts below:
-    */
-
-    //Step 1: initialize communication with the platform
-    // In your own code, replace variable window.apikey with your own apikey
-    //var json = require('credenciais.json');
-    //var  json = JSON.parse(credenciais)
-    var platform = new H.service.Platform({       
-        apikey: 'LT_tNVtE1Y2ZFhJ0DferbwMzG9VATlx2f_wAVxd_uAM'
-    });
-    var defaultLayers = platform.createDefaultLayers();
-
-    //Step 2: initialize a map - this map is centered over Europe
-    var map = new H.Map(document.getElementById('mapContainer'),
-        defaultLayers.vector.normal.map,{
-        center: {lat:50, lng:5},
-        zoom: 4,
-        pixelRatio: window.devicePixelRatio || 1
-    });
-    // add a resize listener to make sure that the map occupies the whole container
-    window.addEventListener('resize', () => map.getViewPort().resize());
-
-    //Step 3: make the map interactive
-    // MapEvents enables the event system
-    // Behavior implements default interactions for pan/zoom (also on mobile touch environments)
-    var behavior = new H.mapevents.Behavior(new H.mapevents.MapEvents(map));
-
-    // Create the default UI components
-    var ui = H.ui.UI.createDefault(map, defaultLayers);
-
-    // Now use the map as required...              
-                    
-    </script>
-
-
-
+    <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
             $('#cep').mask('99999-999');
