--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>    
             </div>
         </div>
-    </div>
+    </div><br><br>
 
     <footer class="bg-light py-5" id="contato">
         <div class="container">
@@ -158,9 +158,9 @@
                         </li>
                         <ul>
                             <li>
-                                <i class="fab fa-instagram"> - <a href="https://www.instagram.com/lucasgiori/"> Lucas Giori Cesconetto</a></i><br>
-                                <i class="fab fa-facebook"> - <a href="https://www.facebook.com/lucas.gioricesconetto"> Lucas Giori Cesconetto</a></i><br>
-                                <i class="fab fa-linkedin"> - <a href="https://www.linkedin.com/in/lucasgiori/"> Lucas </a></i><br>
+                                <i class="fab fa-instagram"> - <a href="https://www.instagram.com/lucasgiori/"> lucasgiori</a></i><br>
+                                <i class="fab fa-facebook"> - <a href="https://www.facebook.com/lucas.gioricesconetto"> lucas.gioricesconetto</a></i><br>
+                                <i class="fab fa-linkedin"> - <a href="https://www.linkedin.com/in/lucasgiori/"> Lucas Giori </a></i><br>
                             </li>
                         </ul>
                     </ul>
