Implementando Efeito Máquina JS

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Consulta Cep</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link " href="#novasimplementacoes">Novas Implementações</a>
-              </li>
               <li class="nav-item">
+                <a class="nav-link " href="contato.html">Contato</a>
+              </li>
+              <!--<li class="nav-item">
                 <a class="nav-link scrollSuave" href="#novasimplementacoes">Novas Implementações</a>
               </li> -->
             </ul>
