Tratando exception de cep nao encontrado

--- a/contato.html
+++ b/contato.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="index.html">Consulta Cep</a>
               </li>
                <li class="nav-item">
-                <a class="nav-link " href="contato.html">Contato</a>
+                <a class="nav-link " href="contato.html">Máquina JS</a>
               </li>
               <!--<li class="nav-item">
                 <a class="nav-link scrollSuave" href="#novasimplementacoes">Novas Implementações</a>
@@ -64,7 +64,7 @@
         </form>
     </div>  
     <div class="container border rounded p-5 mt-5 shadow">
-        <h1 class="tituloprincipal">Teste</h1>
+        <h1 class="tituloprincipal">Texto Exemplo efeito máquina JS!</h1>
     </div><br><br>
 
     <footer class="bg-light py-5" id="contato">
@@ -130,7 +130,6 @@
         $(document).ready(function(){ 
             $("#executar").click    (function(){                
                 const titulo = document.querySelector('.tituloprincipal');
-                console.log(titulo)
                 typeWrite(titulo)
             });
         });  
